Update notebook for Datalab to account for file name changes

--- a/addEntitiesNotebook.ipynb
+++ b/addEntitiesNotebook.ipynb
@@ -38,8 +38,8 @@
     "        locations = datastore.Entity(key=locations_key)\n",
     "        client.put(locations)\n",
     "\n",
-    "addEntitiesToDatastore('MDiningAPILocations.txt','Locations')\n",
-    "addEntitiesToDatastore('MDiningAPIMeals.txt','Meals')"
+    "addEntitiesToDatastore('LocationFull.txt','Locations')\n",
+    "addEntitiesToDatastore('MealFull.txt','Meals')"
    ]
   },
   {
